--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon index"
+    "start": "nodemon index",
+    "prod": "node index.js"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
